--- a/src/scss/components/_sections.scss
+++ b/src/scss/components/_sections.scss
@@ -856,6 +856,17 @@
     }
 }
 
+/* section-devcycle-slider */
+
+.section-devcycle-slider {
+    .swiperDevCycle {
+        margin-right: calc(-0.5 * var(--bs-gutter-x));
+        margin-left: calc(-0.5 * var(--bs-gutter-x));
+        padding-right: calc(var(--bs-gutter-x) * 0.5);
+        padding-left: calc(var(--bs-gutter-x) * 0.5);
+    }
+}
+
 /*------------------------------------------------------------------
 [ blog page ]*/
 
