--- a/src/html/partials/card-devcycle.html
+++ b/src/html/partials/card-devcycle.html
@@ -8,7 +8,16 @@
                 <div class="fw-light text-white-60">@@subtitle</div>
             </div>
             <div>
-                <a href="#" class="btn btn-black btn-l w-100">Оставить заявку</a>
+                <a href="#" class="btn btn-secondary btn-l btn-animated w-100">
+                    <div class="animated-content">
+                        <div class="animated-content__default">
+                            <span>Оставить заявку</span>
+                        </div>
+                        <div class="animated-content__hidden">
+                            <span>Оставить заявку</span>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
