--- a/src/html/partials/section-cta-1.html
+++ b/src/html/partials/section-cta-1.html
@@ -33,9 +33,14 @@
                                         </div>
                                     </button>
                                 </div>
+                                <div class="col">
+                                    <div class="form-check">
+                                        <input type="checkbox" class="form-check-input" id="ctaCheck1">
+                                        <label class="form-check-label fs-x-small text-white-60" for="ctaCheck1">Я даю своё согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</label>
+                                    </div>
+                                </div>
                             </div>
                         </form>
-                        <div class="fs-x-small text-white-60 mt-4">Нажимая кнопку отправить я даю своё согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности</div>
                     </div>
                 </div>
                 <div class="cta-content__socials">
