--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,5 +1,6 @@
     <footer class="footer">
 
+        @@if (showCtaBar) {
         <!-- footer__cta-bar -->
         <div class="footer__cta-bar">
             <div class="container-fluid">
@@ -70,9 +71,14 @@
                                                 </div>
                                             </button>
                                         </div>
+                                        <div class="col">
+                                            <div class="form-check">
+                                                <input type="checkbox" class="form-check-input" id="ctaCheck2">
+                                                <label class="form-check-label fs-x-small text-white-60" for="ctaCheck2">Я даю своё согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</label>
+                                            </div>
+                                        </div>
                                     </div>
                                 </form>
-                                <div class="fs-x-small text-white-60 mt-4">Нажимая кнопку отправить я даю своё согласие на обработку персональных данных и соглашаюсь с политикой конфиденциальности</div>
                             </div>
                         </div>
                     </div>
@@ -80,6 +86,7 @@
                 </div>
             </div>
         </div>
+        }
 
         <!-- footer__main-bar -->
         <div class="footer__main-bar">
@@ -372,6 +379,9 @@
 
     <!-- modal-consultation -->
     @@include('modal-consultation.html')
+
+    <!-- modal-success -->
+    @@include('modal-success.html')
 
     <!-- scripts -->
     <script src="js/bootstrap.bundle.min.js"></script>
