--- a/src/html/partials/modal-consultation.html
+++ b/src/html/partials/modal-consultation.html
@@ -28,10 +28,22 @@
                             <div class="col-span-2">
                                 <textarea class="form-control" rows="4" placeholder="Что не устраивает сайчас?"></textarea>
                             </div>
-                            <div class="col-span-2 mt-10">
-                                <div class="form-check fs-x-small max-w-500">
+                            <div class="col-span-2 mt-10 mt-xl-30">
+                                <a href="#modalSuccess" class="btn btn-primary btn-l btn-animated w-100" data-bs-toggle="modal">
+                                    <div class="animated-content">
+                                        <div class="animated-content__default">
+                                            <span>Отправить</span>
+                                        </div>
+                                        <div class="animated-content__hidden">
+                                            <span>Отправить</span>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-span-2">
+                                <div class="form-check max-w-500">
                                     <input type="checkbox" class="form-check-input" id="consultationCheck">
-                                    <label class="form-check-label" for="consultationCheck">Я даю своё согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</label>
+                                    <label class="form-check-label fs-x-small" for="consultationCheck">Я даю своё согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</label>
                                 </div>
                             </div>
                         </div>
