--- a/src/html/partials/modal-contact.html
+++ b/src/html/partials/modal-contact.html
@@ -23,7 +23,7 @@
                             <img class="img-fluid" src="img/footer/captcha.jpg" alt="">
                         </div>
                         <div class="col-span-2">
-                            <button type="submit" class="btn btn-primary btn-l btn-animated w-100">
+                            <a href="#modalSuccess" class="btn btn-primary btn-l btn-animated w-100" data-bs-toggle="modal" data-bs-dismiss="offcanvas" onclick="closeOffcanvas()">
                                 <div class="animated-content">
                                     <div class="animated-content__default">
                                         <span>Отправить</span>
@@ -32,12 +32,12 @@
                                         <span>Отправить</span>
                                     </div>
                                 </div>
-                            </button>
+                            </a>
                         </div>
                         <div class="col-span-2 mt-10">
-                            <div class="form-check fs-x-small max-w-500">
+                            <div class="form-check max-w-500">
                                 <input type="checkbox" class="form-check-input" id="contactCheck">
-                                <label class="form-check-label" for="contactCheck">Я даю своё согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</label>
+                                <label class="form-check-label fs-x-small" for="contactCheck">Я даю своё согласие на&nbsp;обработку персональных данных и&nbsp;соглашаюсь с&nbsp;политикой конфиденциальности</label>
                             </div>
                         </div>
                     </div>
