--- a/src/scss/components/_modals.scss
+++ b/src/scss/components/_modals.scss
@@ -46,6 +46,68 @@
     }
 }
 
+/* modal-success */
+
+.modal-success {
+    --bs-modal-width: 440px;
+    --bs-modal-padding: 20px 15px;
+
+    .modal-content {
+        overflow: hidden;
+    }
+
+    .bg-absolute-blue-gradient-divider {
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 200px;
+        -webkit-transform: scaleX(-1);
+        transform: scaleX(-1);
+        background-image: var(--theme-blue-gradient);
+
+        &__svg {
+            fill: var(--bs-white);
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            width: 100%;
+            height: 50%;
+            -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+        }
+    }
+
+    .bg-absolute-blue-gradient-spacer {
+        height: 190px;
+    }
+
+    .bg-absolute-img {
+        position: absolute;
+        top: 0;
+        left: 50%;
+        -webkit-transform: translateX(-50%);
+        transform: translateX(-50%);
+        max-width: 70%;
+        height: auto;
+    }
+
+    .btn-close {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+
+    @include media-breakpoint-up(md) {
+        --bs-modal-padding: 40px;
+
+        .bg-absolute-img {
+            max-width: 100%;
+        }
+    }
+}
+
 /*------------------------------------------------------------------
 [ offcanvas ]*/
 
