--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,6 +5,7 @@
     position: relative;
     margin-top: 15px;
     margin-bottom: 15px;
+    z-index: 920;
 
     &.js-fixed {
         top: 10px;
@@ -33,7 +34,7 @@ body.header-absolute {
         right: 0;
         margin-top: 0;
         margin-bottom: 0;
-        z-index: 100;
+        // z-index: 100;
         transition: all 0.3s ease;
 
         @include media-breakpoint-up(lg) {
@@ -52,7 +53,7 @@ body.header-fixed {
         top: 20px;
         left: 0;
         right: 0;
-        z-index: 100;
+        // z-index: 100;
         transition: all 0.3s ease;
     }
 }
@@ -64,7 +65,6 @@ body.header-fixed {
     height: 66px;
     padding-left: 15px;
     padding-right: 8px;
-    border: 1px solid transparent;
     border-radius: var(--bs-border-radius-lg);
     background-color: var(--bs-white);
     -webkit-transition: all 0.3s ease;
@@ -83,41 +83,8 @@ body.header-fixed {
     }
 
     &__navigation {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-
-        .primary-nav {
-            display: flex;
-            flex-direction: row;
-            list-style: none;
-            padding-left: 0;
-            margin-bottom: 0;
-            gap: 32px;
-
-            .nav-item {
-                position: relative;
-                display: inline-flex;
-                align-items: center;
-
-                &.has-mega-menu > a::after,
-                &.has-sub-menu > a::after {
-                    content: "";
-                    display: inline-block;
-                    width: 14px;
-                    height: 14px;
-                    margin-left: 8px;
-                    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='15' viewBox='0 0 14 15' fill='none'%3E%3Cpath d='M13.8407 3.60692C14.0346 3.76404 14.0542 4.03657 13.8845 4.2161L7.35092 11.1279L7 11.5L6.64908 11.1279L0.115513 4.2161C-0.0541926 4.03657 -0.034646 3.76404 0.159265 3.60692C0.353214 3.44983 0.647628 3.46793 0.817361 3.64742L7 10.188L13.1826 3.64742C13.3524 3.46793 13.6468 3.44984 13.8407 3.60692Z' fill='currentColor'/%3E%3C/svg%3E");
-                    background-position: center;
-                    background-size: contain;
-                    background-repeat: no-repeat;
-                }
-
-                > a {
-                    font-size: 16px;
-                }
-            }
-        }
+        display: block;
+        height: 100%;
     }
 
     &__btn-box {
@@ -173,15 +140,196 @@ body.header-fixed {
         &__logo {
             max-width: 175px;
         }
+    }
+}
 
-        &__navigation {
-            .primary-nav {
-                .nav-item {
-                    > a {
-                        font-size: 20px;
-                    }
+/* primary-nav */
+
+.primary-nav {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    padding-left: 0;
+    margin-bottom: 0;
+    height: 100%;
+
+    .nav-item {
+        position: relative;
+        display: inline-flex;
+        align-items: center;
+        height: 100%;
+
+        > a {
+            position: relative;
+            display: block;
+            overflow: hidden;
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 40px;
+            padding: 0 16px;
+            height: 40px;
+            -webkit-transition: all 0.3s ease;
+            transition: all 0.3s ease;
+
+            span {
+                display: block;
+                -webkit-transition: all 300ms ease;
+                transition: all 300ms ease;
+            }
+
+            &:hover .nav-span {
+                -webkit-transform: translateY(-38px);
+                -ms-transform: translateY(-38px);
+                transform: translateY(-38px);
+            }
+
+            &:hover .nav-span2 {
+                -webkit-transform: translateY(-40px);
+                -ms-transform: translateY(-40px);
+                transform: translateY(-40px);
+            }
+        }
+
+        &.has-mega-menu {
+            position: static;
+        }
+
+        &.has-mega-menu > a > span::after,
+        &.has-sub-menu > a > span::after {
+            content: "";
+            display: inline-block;
+            width: 14px;
+            height: 14px;
+            margin-left: 8px;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='14' height='14' viewBox='0 0 14 14' fill='none'%3E%3Cpath d='M13.8407 3.10692C14.0346 3.26404 14.0542 3.53657 13.8845 3.7161L7.35092 10.6279L7 11L6.64908 10.6279L0.115513 3.7161C-0.0541926 3.53657 -0.034646 3.26404 0.159265 3.10692C0.353214 2.94983 0.647628 2.96793 0.817361 3.14742L7 9.688L13.1826 3.14742C13.3524 2.96793 13.6468 2.94984 13.8407 3.10692Z' fill='currentColor'/%3E%3C/svg%3E");
+            background-position: center;
+            background-size: contain;
+            background-repeat: no-repeat;
+        }
+
+        .mega-menu,
+        .sub-menu {
+            opacity: 0;
+            visibility: hidden;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+            border: 0;
+            padding: 0;
+            padding-top: 8px;
+            min-width: 1080px;
+            width: 60vw;
+            z-index: 930;
+            -webkit-transform: translate(0, 10px);
+            -ms-transform: translate(0, 10px);
+            transform: translate(0, 10px);
+            -webkit-transition: opacity 200ms ease-in, visibility 200ms ease-in, -webkit-transform 200ms ease-in;
+            transition: opacity 200ms ease-in, visibility 200ms ease-in, -webkit-transform 200ms ease-in;
+            transition: opacity 200ms ease-in, transform 200ms ease-in, visibility 200ms ease-in;
+            transition: opacity 200ms ease-in, transform 200ms ease-in, visibility 200ms ease-in, -webkit-transform 200ms ease-in;
+        }
+
+        &:hover > .mega-menu,
+        &:hover > .sub-menu {
+            opacity: 1;
+            visibility: visible;
+            -webkit-transform: translate(0, 0);
+            -ms-transform: translate(0, 0);
+            transform: translate(0, 0);
+        }
+    }
+
+    .mega-menu {
+        &__col-navigation {
+            flex: 0 0 auto;
+            width: 300px;
+            padding: 10px;
+            border-radius: var(--bs-border-radius-lg);
+            background-color: #ECECEC;
+        }
+
+        &__nav-link {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            padding: 8px;
+            border-radius: 12px;
+            font-size: 18px;
+            font-weight: 300;
+
+            .nav-link-icon {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 32px;
+                height: 32px;
+                border-radius: 8px;
+                background-image: var(--theme-blue-gradient);
+
+                svg {
+                    flex-shrink: 0;
+                }
+            }
+        }
+
+        &__nav-link.active,
+        &__nav-link:hover {
+            background-color: var(--bs-white);
+        }
+
+        &__col-content {
+            flex: 1 1 auto;
+            padding: 6px 40px;
+
+            .nav {
+                --bs-nav-link-padding-x: 0;
+                --bs-nav-link-padding-y: 16px;
+                --bs-nav-link-font-size: 16px;
+                --bs-nav-link-font-weight: 400;
+                display: grid;
+                grid-template-rows: repeat(7, auto);
+                grid-auto-flow: column;
+                grid-auto-columns: minmax(325px, 1fr);
+                column-gap: 40px;
+
+                // > li {
+                //     width: 325px;
+                // }
+
+                .nav-link svg {
+                    margin-left: 4px;
                 }
             }
         }
     }
+
+    @include media-breakpoint-up(xxl) {
+        .nav-item {
+            > a {
+                font-size: 20px;
+            }
+        }
+    }
+}
+
+/* header-backdrop */
+
+.header-backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(0, 0, 67);
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s ease;
+    z-index: 900;
+}
+
+.js-header-hover .header-backdrop {
+    opacity: 0.5;
+    visibility: visible;
 }
