--- a/src/scss/components/_modals.scss
+++ b/src/scss/components/_modals.scss
@@ -150,7 +150,7 @@
 /* offcanvas-mobilemenu */
 
 .offcanvas-mobilemenu {
-    --bs-offcanvas-height: 95vh;
+    --bs-offcanvas-height: 95dvh;
     top: 15px !important;
     right: 15px !important;
     left: 15px !important;
